package com.cesar.school.core.gamification.vo;

public enum RewardType {
    CUPOM,
    FOLGA,
    DESTAQUE
}
